Added an array for questions and answers

--- a/index.html
+++ b/index.html
@@ -69,23 +69,23 @@
                         </div> 
                         <div class="col-md-8">
                             <div class="form-group" id="radios1">
-                            <label for="formGroupInput">A roux is used to thicken soups or sauces. What is it usually made from?</label>
+                            <label for="formGroupInput"> question</label>
                                 <div class="form-check">
                                     <div class="custom-control custom-radio">
                                         <input type="radio" id="customRadio1" value="0" name="customRadio1" class="custom-control-input" checked>
-                                        <label class="custom-control-label" for="customRadio1">Egg and Flour</label>
+                                        <label class="custom-control-label" for="customRadio1">A</label>
                                     </div>
                                 </div>
                                 <div class="form-check">
                                     <div class="custom-control custom-radio">
                                         <input type="radio" id="customRadio1" value="1" name="customRadio2" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadio1">Butter and Flour</label>
+                                        <label class="custom-control-label" for="customRadio1">B</label>
                                     </div>
                                 </div>    
                                 <div class="form-check">
                                     <div class="custom-control custom-radio">
                                         <input type="radio" id="customRadio1" value="0" name="customRadio3" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadio1">Water and Flour</label>
+                                        <label class="custom-control-label" for="customRadio1">C</label>
                                     </div>
                                 </div>
                             </div>
