Updated game function to rotate through questions and determine right or wrong answer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Delicious Trivia Game</title>
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Charmonman|Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -72,6 +72,7 @@
                                 <div class="display">00:00</div>
                                 <div class="form-group" id="questionBlock"></div>
                                 <div class="form-group" id="answerBlock"></div>
+                                    
                                 <button class="btn btn-success" id="start">Start!</button><br>
                                 <button class="btn btn-success" id="reset">Play Again?</button>
                             </div>
