making edits to javascript to get functionality to work

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="container">
                     <h1 class="display-4">Delicious Trivia!</h1>
                         <p class="lead">Game Rules:</p>
-                        <p>Answer the questions below before your time is up.</p>
+                        <p>Answer each question below before your time is up.</p>
                 </div>
             </div>
 
