Correcting code to start game and loop through question/answer array

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                                 <div class="form-group" id="questionBlock"></div>
                                 <div class="form-group" id="answerBlock"></div>
                                     
-                                <!-- <button class="btn btn-success" id="start">Start!</button><br>
-                                <button class="btn btn-success" id="reset">Play Again?</button> -->
+                                <button class="btn btn-success" id="start">Start!</button><br>
+                                <button class="btn btn-success" id="reset">Play Again?</button>
                             </div>
                         </div>
                            
